--- a/css/cpc.css
+++ b/css/cpc.css
@@ -11,13 +11,24 @@ nav{
 	padding-top: 2px
 }
 
+.card .card-content_visita{
+	padding-top: 0px
+}
+
 th, td{
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
 
-
 .jsgrid-header-row th{
 	/*padding-left: 50px;
 	padding-right: 50px;*/
+}
+
+.text-middle{
+	vertical-align: middle;
+}
+
+.colorCPC{
+	color: #00695C;
 }
