--- a/css/materialize.css
+++ b/css/materialize.css
@@ -83,17 +83,19 @@
   color: #8b1014 !important;
 }
 
+.php{
+  background-color: #a9d4d2 !important;
+  /* background-color: #a9d4d2; */
+}
+
 .red {
   background-color: #F44336 !important;
 }
 
 .qad{
-  background-color: #C0EAE1 !important;
+  background-color: #537a72;
 }
 
-.php{
-  background-color: #A5C2BC !important;
-}
 
 .red-text {
   color: #F44336 !important;
@@ -5018,7 +5020,7 @@ small {
 }
 
 .tabs .tab a {
-  color: rgba(238, 110, 115, 0.7);
+  color: #00695C;
   display: block;
   width: 100%;
   height: 100%;
@@ -5031,12 +5033,12 @@ small {
 
 .tabs .tab a:hover, .tabs .tab a.active {
   background-color: transparent;
-  color: #ee6e73;
+  color: #00695C;
 }
 
 .tabs .tab.disabled a,
 .tabs .tab.disabled a:hover {
-  color: rgba(238, 110, 115, 0.7);
+  color: #00695C;;
   cursor: default;
 }
 
@@ -5044,7 +5046,7 @@ small {
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: #f6b2b5;
+  background-color: #00695C;
   will-change: left, right;
 }
 
